Update Pages “home”

--- a/data/pages/home.yml
+++ b/data/pages/home.yml
@@ -1,5 +1,5 @@
 hero:
-  image: /images/uploads/homepage-hero.jpg
+  image: https://newbietech.io/static/media/testbg5.5a665b10.jpg
   title: Newbie Tech
 story: |-
   Facilitated and\
